Finished Tree and Tester